[package]
name = "gol"
version = "0.1.0"
authors = ["andrea"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gol_builder = {git="https://github.com/la10736/gol_builder"}

[dependencies.pancurses]
version = "0.16.1"
features = ["wide"]
